Added task to publish guides and fixed default title

--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title><%= yield(:page_title) || 'Ruby on Rails guides' %></title>
+<title><%= yield(:page_title) || 'Ubiquo guides' %></title>
 
 <link rel="stylesheet" type="text/css" href="files/stylesheets/style.css" />
 <link rel="stylesheet" type="text/css" href="files/stylesheets/syntax.css" />
