Added initial ubiquo_activity guide

--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -29,6 +29,7 @@
               <dt>Plugins</dt>
               <dd><a href="ubiquo_core.html">Ubiquo Core</a></dd>
               <dd><a href="ubiquo_access_control.html">Ubiquo Access Control</a></dd>
+              <dd><a href="ubiquo_activity.html">Ubiquo Activity</a></dd>
               <dd><a href="ubiquo_authentication.html">Ubiquo Authentication</a></dd>
               <dd><a href="ubiquo_i18n.html">Ubiquo i18n</a></dd>
               <dd><a href="ubiquo_media.html">Ubiquo Media</a></dd>
