Added ubiquo jobs and reordered ubiquo_core links in navigation menu

--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -27,11 +27,12 @@
               <dt>Start Here</dt>
               <dd><a href="getting_started.html">Getting Started with Ubiquo</a></dd>
               <dt>Plugins</dt>
-              <dd><a href="ubiquo_core.html">Ubiquo Core</a></dd>
               <dd><a href="ubiquo_access_control.html">Ubiquo Access Control</a></dd>
               <dd><a href="ubiquo_activity.html">Ubiquo Activity</a></dd>
               <dd><a href="ubiquo_authentication.html">Ubiquo Authentication</a></dd>
+              <dd><a href="ubiquo_core.html">Ubiquo Core</a></dd>
               <dd><a href="ubiquo_i18n.html">Ubiquo i18n</a></dd>
+              <dd><a href="ubiquo_jobs.html">Ubiquo Jobs</a></dd>
               <dd><a href="ubiquo_media.html">Ubiquo Media</a></dd>
               <dd><a href="ubiquo_scaffold.html">Ubiquo Scaffold</a></dd>
               <dd><a href="ubiquo_versions.html">Ubiquo Versions</a></dd>
