Added ubiquo favicon

--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="files/stylesheets/style.css" />
 <link rel="stylesheet" type="text/css" href="files/stylesheets/syntax.css" />
 <link rel="stylesheet" type="text/css" href="files/stylesheets/print.css" media="print" />
+<link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
 
 <script type="text/javascript" src="files/javascripts/guides.js"></script>
 <script type="text/javascript" src="files/javascripts/code_highlighter.js"></script>
