Updated header title text [#10 state:resolved]

--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -17,7 +17,7 @@
 <body class="guide">
   <div id="header">
     <div class="wrapper clearfix">
-      <h1><a href="index.html" title="Return to home page">Guides.rubyonrails.org</a></h1>
+      <h1><a href="index.html" title="Return to home page">guides.ubiquo.me</a></h1>
       <p class="hide"><a href="#mainCol">Skip navigation</a>.</p>
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
