Added google analytics code

--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -67,5 +67,15 @@
       <p>This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-Share Alike 3.0</a> License</a></p>
     </div>
   </div>
+  <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+    try {
+      var pageTracker = _gat._getTracker("UA-397459-3");
+      pageTracker._trackPageview();
+      } catch(err) {}
+   </script>
 </body>
 </html>
