--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -31,6 +31,7 @@
               <dd><a href="ubiquo_access_control.html">Ubiquo Access Control</a></dd>
               <dd><a href="ubiquo_activity.html">Ubiquo Activity</a></dd>
               <dd><a href="ubiquo_authentication.html">Ubiquo Authentication</a></dd>
+              <dd><a href="ubiquo_categories.html">Ubiquo Categories</a></dd>
               <dd><a href="ubiquo_core.html">Ubiquo Core</a></dd>
               <dd><a href="ubiquo_i18n.html">Ubiquo i18n</a></dd>
               <dd><a href="ubiquo_jobs.html">Ubiquo Jobs</a></dd>
