Added ubiquo_design guide (cherry picked from commit 5849817305f60e02c9d45d7ebef1b8cc4187a49a)

--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -32,6 +32,7 @@
               <dd><a href="ubiquo_activity.html">Ubiquo Activity</a></dd>
               <dd><a href="ubiquo_authentication.html">Ubiquo Authentication</a></dd>
               <dd><a href="ubiquo_core.html">Ubiquo Core</a></dd>
+              <dd><a href="ubiquo_design.html">Ubiquo Design</a></dd>
               <dd><a href="ubiquo_i18n.html">Ubiquo i18n</a></dd>
               <dd><a href="ubiquo_jobs.html">Ubiquo Jobs</a></dd>
               <dd><a href="ubiquo_media.html">Ubiquo Media</a></dd>
