--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -36,6 +36,7 @@
               <dd><a href="ubiquo_authentication.html">Ubiquo Authentication</a></dd>
               <dd><a href="ubiquo_categories.html">Ubiquo Categories</a></dd>
               <dd><a href="ubiquo_core.html">Ubiquo Core</a></dd>
+              <dd><a href="ubiquo_design.html">Ubiquo Design</a></dd>
               <dd><a href="ubiquo_i18n.html">Ubiquo i18n</a></dd>
               <dd><a href="ubiquo_jobs.html">Ubiquo Jobs</a></dd>
               <dd><a href="ubiquo_media.html">Ubiquo Media</a></dd>
