Added stable badge

--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -15,6 +15,9 @@
 
 </head>
 <body class="guide">
+  <div>
+    <img id="stable-badge" alt="stable-badge" src="images/stable_badge.png">
+  </div>
   <div id="header">
     <div class="wrapper clearfix">
       <h1><a href="index.html" title="Return to home page">guides.ubiquo.me</a></h1>
