Updated ubiquo_design guide, reworded some phrases, added images [#22]

--- a/guides/files/stylesheets/main.css
+++ b/guides/files/stylesheets/main.css
@@ -421,6 +421,10 @@ a.rdoc {
     vertical-align:middle;
 }
 
+img.screenshot{
+  width: 69em;
+}
+
 /* Clearing
 --------------------------------------- */
 
