Added 0.8-stable badge

--- a/guides/files/stylesheets/main.css
+++ b/guides/files/stylesheets/main.css
@@ -459,10 +459,10 @@ div.important p, div.caution p, div.warning p, div.note p, div.info p {
     margin-bottom: 0px;
 }
 
-/* Edge Badge
+/* Stable Badge
  * --------------------------------------- */
 
-#edge-badge {
+#stable-badge {
   position: fixed;
   right: 0px;
   top: 0px;
