--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -16,7 +16,7 @@
 </head>
 <body class="guide">
   <div>
-    <img id="edge-badge" alt="edge-badge" src="images/edge_badge.png">
+    <img id="stable-badge" alt="stable-badge" src="images/stable_badge.png">
   </div>
   <div id="header">
     <div class="wrapper clearfix">
